--- a/common.css
+++ b/common.css
@@ -83,6 +83,7 @@ input.command-input[type="search"]{
 	height:100%;
 	background-color:white;
 }
+/* [type="color"]はcssをうまく読み取れないため、直接styleを指定することとする。 */
 
 select.command-input{
 	font-size: 12px;
@@ -119,46 +120,6 @@ input[type="button"].command-input:hover{
 	color: #fff;
 	cursor: pointer;
 	text-decoration: none;
-}
-
-/* ========== ========== ========== ========== */
-/* エンチャント(廃止予定)                      */
-/* ========== ========== ========== ========== */
-table.enchant-table{
-	float:left;
-	width:auto;
-}
-.enchant-table tbody{
-	border-style: none;
-	font-size: 12px;
-	float:left;
-}
-.enchant-table th{
-	background: #DDEBF7;
-	border-style: none;
-	border-right:solid 1px white;
-	border-bottom:solid 1px white;
-}
-.enchant-table td{
-	height:33px;
-	padding:0px;
-	font-size: 12px;
-	border-style: none;
-	border-right:solid 1px white;
-	border-bottom:solid 1px white;
-}
-.enchant-table td:nth-of-type(1){
-	background-color:ghostwhite;
-}
-/* インプット */
-.enchant-table input{
-	padding: 0;
-	border-radius: 0;
-	font-size:12px;
-}
-.enchant-table input[type="number"]{
-	width:100%;
-	height:100%;
 }
 
 /* ========== ========== */
